// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _accessKey="V" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _accesskey="V" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          V
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input accesskey="V" autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _alert=true 1`] = `
<kol-input-file _alert="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _disabled=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _disabled="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-not-allowed kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-not-allowed kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-not-allowed kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-not-allowed kol-input-file-input" disabled="" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _hint="Hint" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="Hint" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideError=true 1`] = `
<kol-input-file _hide-error="" _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hideerror="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _readOnly=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _readonly="" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _shortKey="S" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _shortkey="S" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        Label
        <span aria-hidden="true" class="badge-text-hint">
          S
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" _touched=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _touched="" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _alert="" _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" _touched="" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="File" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" class="kol-input-file">
  <template shadowrootmode="open">
    <kol-input _hint="" _id="id-nonce" _label="Label" _tooltipalign="top" class="file" role="presentation">
      <span slot="label">
        <span>
          Label
        </span>
      </span>
      <label class="cursor-pointer kol-input-file-label" htmlfor="id-nonce" slot="input">
        <div aria-hidden="true" class="cursor-pointer kol-input-file-button">
          Datei auswählen
        </div>
        <div aria-hidden="true" class="cursor-pointer kol-input-file-text">
          File
        </div>
        <input autocapitalize="off" autocorrect="off" class="cursor-pointer kol-input-file-input" id="id-nonce" name="field" type="file" value="File">
      </label>
    </kol-input>
  </template>
</kol-input-file>
`;
